Fixed height of movie-info bar on tablet

--- a/src/Components/elements/MovieInfoBar/MovieInfoBar.css
+++ b/src/Components/elements/MovieInfoBar/MovieInfoBar.css
@@ -45,6 +45,7 @@
     width: 33.33%;
     box-sizing: border-box;
     padding: 10px 20px 0 0;
+    
   }
 
   .rmdb-movieinfobar {
@@ -57,4 +58,9 @@
     font-family: 'Abel', sans-serif;
     font-size: 22px;
   }
+
+   .rmdb-movieinfobar {
+    height: 140px;
+
+  } 
 }
